filter posts by userId, delete post, lat lng for post creating
